This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.13
  Installer: Embed MS runtime files installer for x64 (r7150)
  Allow DOS-style pattern matching in Open-dialog filters (#2988369)

WinMerge 2.13.12 - 2010-04-29 (r7148)
  Update copyright year to 2010
  Installer: Embed MS runtime files installer (r7139)
  Fix help locations (#2988974)
  Bugfix: Strange scrolling effect in location pane (#2942869)
  Bugfix: Difference panel didn't show differences when moved blocks were
    enabled (#2988656)
  Translation updates:
  - Chinese Traditional (#2954833)
  - French (#2968200)
  - Polish (#2951149)
  - Slovenian (#2934354)
  - Swedish (#2943964)

WinMerge 2.13.11 - 2010-01-15 (r7111)
  Write config log as UTF-8 file (r7057)
  Update PCRE to version 8.00 (r7068)
  Update SCEW to version 1.1.1 (r7079)
  Add "Additional Tasks" dialog to MSI setup (#2925723)
  Bugfix: Plugin error after interrupting folder compare (#2919475)
  Bugfix: GUI Word Wrap missing text (#2921400, #2894033)
  Bugfix: Selected custom odepage was not used (#2921555)
  Bugfix: Created new matching folder to wrong folder (#2890961)
  Bugfix: Pane headers not updated after language change (#2923684)
  Bugfix: File panes become unaligned when last line didn't have
    an EOL byte (#2922517)
  Bugfix: Automatic rescanning was not disabled everywhere (r7086,r7089)
  Bugfix: Quick contents compare didn't ignore EOL byte differences (#2929005)
  Translation updates:
  - Slovenian (#2917796, #2932094)
  - Spanish (#2930734)

WinMerge 2.13.10 2009-12-21 (r7051)
  Visual Studio project files upgraded to VS2005 format (r7045)
  Bugfix: New Persian translation don't work (#2884856)
  Bugfix: German shortcut key conflict resolution (#2894257)